fix nowrap error

--- a/src/components/RightColumn/WorkHistory/WorkHistory.css
+++ b/src/components/RightColumn/WorkHistory/WorkHistory.css
@@ -40,3 +40,7 @@ ul.roles li {
   width: 100%;
   margin-bottom: 5px;
 }
+
+.no-wrap {
+  white-space: nowrap;
+}
